<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/searchlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/search_view"
            android:queryHint="@string/search_hint"
            android:iconifiedByDefault="true">
        </SearchView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout1"
        android:layout_below="@+id/searchlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal">
        <Button
            android:id="@+id/nsebtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_nse"
            android:onClick="nse_btn">

        </Button>
        <Button
            android:id="@+id/bsentn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_bse"
            android:onClick="bse_btn">

        </Button>
        <Button
            android:id="@+id/nysebtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_nyse"
            android:onClick="nyse_btn">

        </Button>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout2"
        android:layout_below="@+id/layout1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mainlist"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center">

        </TextView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/myrecyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
</RelativeLayout>